# py-shop-task

first-task/: Cargo.toml
first-task/src/: main.rs  read_args.rs
third-task/: Cargo.toml
third-task/src/: check_hash.rs  find_counter.rs  find_hashes.rs  hash.rs  main.rs  number_iterator.rs  print_count.rs  read_args.rs
